--- a/public/css/main.css
+++ b/public/css/main.css
@@ -94,10 +94,10 @@ strong {
 .trailerbutt {
   /* Rectangle 3: */
   /* Rectangle 3: */
-  background: #FB28B4;
+  background: #FC27A4;
   margin-bottom: 10px;
   margin-right: 10px;
-  box-shadow: 0px 5px 0px 0px #AC0474;
+  box-shadow: 0px 5px 0px 0px #9F006F;
   border-radius: 15px;
   width: 350px;
   height: 70px;
@@ -105,15 +105,19 @@ strong {
   font-family: "ff-mark-web", sans-serif;
   font-size: 30px;
   color: #FFFFFF;
-  letter-spacing: 0px; }
+  letter-spacing: 0px;
+  text-decoration: underline; }
+
+.trailerbutt:hover {
+  background-color: #9F006F; }
 
 .preorderbutt {
   /* Rectangle 3: */
   /* Rectangle 3: */
-  background: #FF5D31;
+  background: #FC27A4;
   margin-bottom: 10px;
   margin-right: 10px;
-  box-shadow: 0px 5px 0px 0px #cb4e2d;
+  box-shadow: 0px 5px 0px 0px #9F006F;
   border-radius: 15px;
   width: 350px;
   height: 70px;
@@ -121,37 +125,47 @@ strong {
   font-family: "ff-mark-web", sans-serif;
   font-size: 30px;
   color: #FFFFFF;
-  letter-spacing: 0px; }
+  letter-spacing: 0px;
+  text-decoration: underline; }
+
+.preorderbutt:hover {
+  background-color: #9F006F; }
 
 .btn:hover {
   color: white; }
 
 .header {
-  background-image: url(/images/GNOG-screenshot2bg.png);
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-image: url(/images/patternDarkchibi.png);
+  background-repeat: repeat;
+  background-size: 400px;
+  background-repeat: repeat;
   background-position: center;
   font-family: "ff-mark-web", sans-serif;
   font-size: 1em;
-  color: #fff; }
+  color: #FC27A4; }
+  .header span {
+    color: white;
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+    padding-right: 10px; }
   .header .h1 {
     font-family: "ff-mark-web", sans-serif;
     font-size: 2.5em;
     font-weight: 800;
-    color: #FFF;
+    color: #fff !important;
     line-height: 1.3em; }
   .header p {
     font-size: 1em;
     color: #fff; }
-    .header p span:nth-child(1) {
-      color: #6FF55C; }
-    .header p span:nth-child(2) {
-      color: #FF623E; }
   .header a {
     font-size: 1.3em;
     font-weight: 400;
-    color: #FC27A4;
+    color: #fff;
     text-decoration: underline; }
+  .header a:hover {
+    color: #270ACC; }
 
 .games-btn {
   font-size: 1.4em;
